# stepwork

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  pyproject.toml
.github/workflows/: ci.yml
Prototype/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  app.js  critique.json  index.html  inspector.html  projects.html  radar.html  render.html  settings.html  studio.html  styles.css  tasks.html
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: dispatch.rs  health.rs  mod.rs
apps/desktop/src-tauri/src/sidecar/: heartbeat.rs  mod.rs  rpc_client.rs  spawn.rs
cli/: __init__.py  __main__.py  config.py
cli/tests/: __init__.py  test_cli.py
core/schemas/: README.md
deliverables/gstack/: W7_PLAN-2026-07-23.md  W7_REVIEW-2026-07-23.md  W8_PLAN-2026-07-23.md  W8_REVIEW-2026-07-23.md  W9_PLAN-2026-07-23.md  W9_REVIEW-2026-07-24.md  gstack-review-w1w6-2026-07-22.md  gui-mvp-run-2026-07-23.md  plan-w7-w9-2026-07-23.md
docs/: DECISIONS.md  LICENSE_AUDIT.md  MIGRATION_ASSESSMENT.md  MVP_PLAN.md  PERF_BASELINE.md  PHASE_PLAN.md  PRD.md  PRODUCT_CHARTER.md  README.md  STRATEGY_PLAN.md  SYSTEM_SPEC.md  UPGRADE.md  W1_MONOREPO_PLAN.md  W1_REVIEW.md  W2_REVIEW.md  W3_W4_PLAN.md  W3_W4_REVIEW.md  W5_PLAN.md  W5_REVIEW.md  W6_PLAN.md  settings_page_plan.md
docs/adr/: ADR-001-tauri-react.md  ADR-002-python-sidecar.md  ADR-003-sqlite-wal.md  ADR-004-command-bus.md  ADR-005-artifact-first.md  ADR-006-agpl-apache.md  ADR-007-cli-mcp-first.md  ADR-008-publisher-fill-preview.md  ADR-009-plugin-isolated-process.md  ADR-010-media-auto-pilot-migration.md
mcp/: __init__.py  server.py
mcp/tests/: __init__.py  test_mcp.py
migrations/: 0001_init.sql  0002_audit_events.sql  0003_agent_placeholder.sql  0004_plugin_registry.sql  README.md
schemas/: README.md  analysis.schema.json  artifact-envelope.schema.json  command-envelope.schema.json  error-envelope.schema.json  job-stage.enum.json  job-state.enum.json
scripts/: install.ps1  seed_demo.py  uninstall.ps1
worker/: README.md  __init__.py  dev_bridge.py  pyproject.toml
worker/runtime/: __init__.py  __main__.py  app.py  bootstrap.py  deps.py  heartbeat.py  logging_config.py  models.py  rpc.py  state.py
worker/runtime/analysis/: __init__.py  prompt.py  report.py  schema.py
worker/runtime/commands/: __init__.py  bus.py  envelope.py
worker/runtime/db/: __init__.py  connection.py  migrations.py  repos.py
worker/runtime/handlers/: __init__.py  agent.py  analyze_source.py  backup.py  cancel_job.py  commands.py  config.py  diagnostics.py  generate_script.py  generate_topic.py  health.py  import_source.py  lifecycle.py  plugins.py  project_io.py  provenance.py  queries.py  render_source.py  save_script.py  transcribe_source.py
worker/runtime/ingest/: __init__.py  hash.py  metadata.py
worker/runtime/jobs/: __init__.py  cancel.py  engine.py  lease.py  lifecycle.py
worker/runtime/providers/: __init__.py  resolve.py
worker/runtime/providers/ai/: __init__.py  base.py  cloud.py  openai_compatible.py
worker/runtime/providers/asr/: __init__.py  base.py  cloud.py  local.py
worker/runtime/providers/renderer/: __init__.py  base.py  ffmpeg.py
worker/runtime/providers/tts/: __init__.py  base.py  cloud.py  local.py
worker/runtime/render/: __init__.py  ffmpeg_runner.py
worker/runtime/script/: __init__.py  parse.py  prompt.py
worker/runtime/topic/: __init__.py  parse.py  prompt.py
worker/tests/: __init__.py  conftest.py  test_agent.py  test_ai.py  test_analysis.py  test_analyze.py  test_asr.py  test_backup.py  test_commands.py  test_config_command.py  test_db.py  test_diagnostics.py  test_dispatch_rpc.py  test_e2e.py  test_ffmpeg_runner.py  test_health.py  test_ingest.py  test_jobs.py  test_jobs_lifecycle.py  test_lifecycle.py  test_logging_config.py  test_performance.py  test_plugins.py  test_project_io.py  test_provenance.py  test_render.py  test_resolve.py  test_rpc.py  test_run_command.py  test_topic.py  test_transcribe.py  test_tts.py
worker/tests/fakes/: fake_ffmpeg.py
(+34 files in other folders)
