[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stepwork-worker"
version = "0.1.0"
description = "STEPWORK Python Worker Sidecar (W1.3)"
readme = "worker/README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
stepwork-worker = "worker.runtime.__main__:main"

# W2 carry-over #3: package the `worker` top-level package (which has a
# real worker/__init__.py) instead of only `runtime`. Resolving the
# manifest from the repo root makes `pip install -e .` yield an
# importable `worker.runtime` (previously the wheel mapped `runtime`
# to a top-level package and dropped `worker`).
[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.hatch.build.targets.wheel.sources]
worker = "worker"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC", "ANN"]
# ANN401: 允许未标注返回/参数（已有 mypy strict 把关）
# UP045: Optional[X] 与 X | None 的风格二选一，交由 mypy 统一；避免 churn
ignore = ["ANN401", "UP045"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["worker/tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["worker"]
branch = true

[tool.coverage.report]
exclude-lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
show-missing = true
